--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/FooterHolder.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/FooterHolder.html
@@ -10,28 +10,22 @@
 <script src="js/jquery.jcarousel.js" type="text/javascript"></script>
 <script src="js/jquery-func.js" type="text/javascript"></script>
 </head>
-<body>
-	<!-- START PAGE SOURCE -->
 
-	<wicket container wicket:id="header-holder-panel"></wicket>
+<wicket:panel>
 
-	<div id="main-holder">
+	<div id="footer-holder">
 		<div class="shell">
-
-			<wicket:container wicket:id="slider-holder"></wicket:container>
-
-			<div id="main">
-				<div id="big-content">
-
-					<wicket:child />
-
-				</div>
+			<div class="footer">
+				<p class="lf">
+					Andrew Zenov for <a href="http://www.epam.by/">EMAP</a> training
+					&copy; 2015
+				</p>
+				<p class="rf">Кто не играет - то и не выигрывает</p>
+				<div style="clear: both;"></div>
 			</div>
 		</div>
 	</div>
 
-<wicket:container wicket:id="footer-holder-panel"></wicket:container>
+</wicket:panel>
 
-	<!-- END PAGE SOURCE -->
-</body>
 </html>
