--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/FooterHolder.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/FooterHolder.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>Races</title>
-<meta http-equiv="Content-type" content="text/html" charset="UTF-8" />
-<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-<link rel="shortcut icon" type="image/x-icon"
-	href="css/images/favicon.ico" />
-<script src="js/jquery-1.4.2.min.js" type="text/javascript"></script>
-<script src="js/jquery.jcarousel.js" type="text/javascript"></script>
-<script src="js/jquery-func.js" type="text/javascript"></script>
-</head>
+<meta charset="utf-8" />
 
 <wicket:panel>
 
@@ -28,4 +17,4 @@
 
 </wicket:panel>
 
-</html>
+
