--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/HeaderHolderPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/HeaderHolderPanel.html
@@ -1,18 +1,22 @@
+<meta charset="utf-8" />
+<html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
 
-<div id="header-holder">
+	<div id="header-holder">
 
-  <div class="shell">
-    <div id="header">
-       <div id= "logo">
-      <h1>Онлайн ставки на скачки</h1>
-      </div>
-      
-		<wicket:container wicket:id="main-menu-panel"></wicket:container>
-		
-		
-    </div>
-  </div>
-</div>
+		<div class="shell">
+			<div id="header">
+				<div id="logo">
+					<wicket:container wicket:id="input-panel"></wicket:container>
+					<h1>РћРЅР»Р°Р№РЅ СЃС‚Р°РІРєРё РЅР° СЃРєР°С‡РєРё</h1>
+
+				</div>
+
+				<wicket:container wicket:id="main-menu-panel"></wicket:container>
+
+			</div>
+		</div>
+	</div>
 
 </wicket:panel>
+</html>
