--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/HeaderHolderPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/HeaderHolderPanel.html
@@ -7,9 +7,10 @@
 		<div class="shell">
 			<div id="header">
 				<div id="logo">
-					<wicket:container wicket:id="input-panel"></wicket:container>
-					<h1>Онлайн ставки на скачки</h1>
-
+					<wicket:container wicket:id="input-panel">
+					</wicket:container>
+					<h1 style="font-size: 45px">Онлайн ставки на скачки</h1>
+					<br />
 				</div>
 
 				<wicket:container wicket:id="main-menu-panel"></wicket:container>
