--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/SliderHolder.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/SliderHolder.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
+
 <meta charset="utf-8" />
+
 
 <wicket:panel>
 
-	<div id="slider-holder">
 
-		<div id="slider-nav">
-			<ul>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
-				<li><a href="#">3</a></li>
-			</ul>
-
-		</div>
-		<div class="slider">
-			<ul>
-				<li>
-					<div class="image">
-						<img src="css/images/slider-img1.jpg" alt="" />
-					</div>
-					<div class="slider-cnt">
-						<!--   <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>   -->
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="css/images/slider-img2.jpg" alt="" />
-					</div>
-					<div class="slider-cnt">
-						<!--    <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>-->
-					</div>
-				</li>
-				<li>
-					<div class="image">
-						<img src="css/images/slider-img3.jpg" alt="" />
-					</div>
-					<div class="slider-cnt">
-						<!--     <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>-->
-					</div>
-				</li>
-			</ul>
-		</div>
-	</div>
-
+  <div id="slider-holder">
+      <div id="slider-nav">
+        <ul>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+        </ul>
+      </div>
+      <div class="slider">
+        <ul>
+          <li>
+            <div class="image"> <img src="css/images/slider-img1.jpg" alt="" /> </div>
+            <div class="slider-cnt">
+             <!-- <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2> -->
+            </div>
+          </li>
+          <li>
+            <div class="image"> <img src="css/images/slider-img2.jpg" alt="" /> </div>
+            <div class="slider-cnt">
+            <!--  <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2> -->
+            </div>
+          </li>
+          <li>
+            <div class="image"> <img src="css/images/slider-img3.jpg" alt="" /> </div>
+            <div class="slider-cnt">
+            <!--  <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2> -->
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
 
 </wicket:panel>
 </html>
