--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/MainMenuPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/MainMenuPanel.html
@@ -8,23 +8,26 @@
 
 	<wicket:enclosure child="home-page-link">
 
-		 <div id="navigation">
-        <ul>
-         <li><a wicket:id="home-page-link"><span>Главная</span></a><span class="arrow">&nbsp;</span></li>
-          <li><a wicket:id="rates-page-link"><span>Ставки</span></a><span class="arrow">&nbsp;</span></li>
-          <li><a wicket:id="result-page-link"><span>Результаты</span></a><span class="arrow">&nbsp;</span></li>
- 			
-          <li><a href="#"><span>Support</span></a><span class="arrow">&nbsp;</span></li>
-          <li><a href="#"><span>Partners</span></a><span class="arrow">&nbsp;</span></li>
-                    <li><a wicket:id="rules-page-link"><span>Правила</span></a><span class="arrow">&nbsp;</span></li>
-          <li><a wicket:id="about-us-page-link"><span>О нас</span></a><span class="arrow">&nbsp;</span></li>
-        </ul>
-      </div>
+		<div id="navigation">
+			<ul>
+				<li><a wicket:id="home-page-link"><span>Главная</span></a><span
+					class="arrow">&nbsp;</span></li>
+				<li><a wicket:id="rates-page-link"><span>Ставки</span></a><span
+					class="arrow">&nbsp;</span></li>
+				<li><a wicket:id="result-page-link"><span>Результаты</span></a><span
+					class="arrow">&nbsp;</span></li>
+
+				<li><a wicket:id="rules-page-link"><span>Правила</span></a><span
+					class="arrow">&nbsp;</span></li>
+				<li><a wicket:id="about-us-page-link"><span>О нас</span></a><span
+					class="arrow">&nbsp;</span></li>
+			</ul>
+		</div>
 
 
 	</wicket:enclosure>
-	
-	
-	
+
+
+
 </wicket:panel>
 </html>
