--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/headerHolder/userHeaderHolder/HeaderHolderPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/headerHolder/userHeaderHolder/HeaderHolderPanel.html
@@ -8,7 +8,7 @@
 			<div id="header">
 				<div id="logo">
 				
-					<wicket:container wicket:id="input-panel">
+					<wicket:container wicket:id="logout-input-panel">
 					</wicket:container>
 					
 					<h1 style="font-size: 45px"><wicket:container wicket:id="title"></wicket:container></h1>
