--- a/WEB/web-races/webapp/src/main/webapp/css/style.css
+++ b/WEB/web-races/webapp/src/main/webapp/css/style.css
@@ -227,7 +227,7 @@ ul li span.arrow {
 	width: 980px;
 	height: 300px;
 	position: relative;
-	margin-top: -149px;
+	margin-top: -135px;
 	padding: 1px;
 }
 
@@ -433,4 +433,12 @@ ul.links li a {
 
 .footer .rf {
 	float: right;
+}
+
+.employees .botton-link{
+	float:right;
+	font-size: 20px;
+	color: orange;
+	padding: 3px;
+	border: 2px solid;
 }
