--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationForm/RegistrationUserForm.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationForm/RegistrationUserForm.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
-<form class="contact_form" wicket:id="form">
+<wicket:panel>
+
+	<form class="contact_form" wicket:id="form">
+
 		<ul>
 			<li>
 				<h2>Contact Us</h2> <span class="required_notification">*
 					Denotes Required Field</span>
 			</li>
-			<li><label for="name">First name:</label> <input type="text"
-				wicket:id="firstName" placeholder="Andrew" required /></li>
-				
-			<li><label for="name">Surname:</label> <input type="text"
-				wicket:id="surname" placeholder="Zenov" required /></li>
-				
-			<li><label for="email">Email:</label> <input type="text"
-				wicket:id="email" placeholder="andrew_zenov@example.com" required /> <span
-				class="form_hint">Proper format "name@something.com"</span></li>
-				
-			<li><label for="name">Login:</label> <input type="text"
+			<li><label wicket:for="firstName">First name:</label> <input
+				type="text" wicket:id="firstName" placeholder="Andrew" required /></li>
+
+			<li><label wicket:for="surname">Surname:</label> <input
+				type="text" wicket:id="surname" placeholder="Zenov" required /></li>
+
+			<li><label wicket:for="email">Email:</label> <input type="email"
+				wicket:id="email" placeholder="andrew_zenov@example.com" required />
+				<span class="form_hint">Proper format "name@something.com"</span></li>
+
+			<li><label wicket:for="login">Login:</label> <input type="text"
 				wicket:id="login" placeholder="login" required /></li>
-				
-			<li><label for="name">Password:</label> <input type="password"
-				wicket:id="password" required /></li>
-				
-				
-				
+
+			<li><label wicket:for="password">Password:</label> <input
+				type="password" wicket:id="password" required /></li>
+
+			<!--  wicket:enclosure child=this_component_will_determine_visibility>
+			</wicket:enclosure-->
+				<li><label wicket:for="drop-role">Role:</label> <select
+					wicket:id="drop-role" required></select></li>
+					
+			
+
 			<li>
 				<button class="submit" type="submit" wicket:id="submit-button">Submit
 					Form</button>
-					
+
 			</li>
 		</ul>
 	</form>
+
+</wicket:panel>
