--- a/WEB/web-races/webapp/src/main/webapp/form-styles.css
+++ b/WEB/web-races/webapp/src/main/webapp/form-styles.css
@@ -2,7 +2,9 @@
 *:focus {outline: none;}
 
 /* === Form Typography === */
-
+body {font: 14px/21px "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;}
+.contact_form h2, .contact_form label {font-family:Georgia, Times, "Times New Roman", serif;}
+.form_hint, .required_notification {font-size: 11px;}
 
 /* === List Styles === */
 .contact_form ul {
