--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/LogoutPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/LogoutPanel.html
@@ -1,13 +1,13 @@
 <meta charset="utf-8" />
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-	<div id="navigation">
-		<div class="input-menu">
-			<ul>
-				<li class="logout"><a wicket:id="logout"><span>Logout</span></a><span
-					class="arrow">&nbsp;</span></li>
-			</ul>
-		</div>
+	<div class="logout-input">
+
+
+		<a class="button7" wicket:id="logout"><span>Logout</span></a><span
+			class="arrow">&nbsp;</span>
+
 	</div>
+
 </wicket:panel>
 </html>
