--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationForm/RegistrationUserForm.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationForm/RegistrationUserForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<wicket:panel>
+<wicket:panel xmlns:wicket="http://wicket.apache.org">
 
-	<form class="contact_form" wicket:id="form">
+	<form class="contact_form" wicket:id="registration-form">
 
 		<ul>
 			<li>
