update//add DataViev

--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/InputPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/InputPanel.html
@@ -1,15 +1,16 @@
 <meta charset="utf-8" />
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-	<div id="navigation">
-		<div class="input-menu">
-			<ul>
-				<li><a wicket:id="registration-page-link"><span>Регистрация</span></a><span
-					class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="login-page-link"><span>Вход</span></a><span
-					class="arrow">&nbsp;</span></li>
-			</ul>
-		</div>
+
+
+	<div class="logout-input">
+
+		<a class="button" wicket:id="registration-page-link"><span>Регистрация</span></a><span
+			class="arrow">&nbsp;</span> 
+			<a class="button"
+			wicket:id="login-page-link"><span>Вход</span></a><span class="arrow">&nbsp;</span>
+
 	</div>
+
 </wicket:panel>
 </html>
