--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/menuPanel/adminMenuPanel/AdminMainMenuPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/menuPanel/adminMenuPanel/AdminMainMenuPanel.html
@@ -14,7 +14,7 @@
 					class="arrow">&nbsp;</span></li>
 				<li><a wicket:id="rates-page-link"><span>Ставки</span></a><span
 					class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="employee-page-link"><span>Сотрудники</span></a><span
+				<li><a wicket:id="edit-page-link"><span>Редактировать</span></a><span
 					class="arrow">&nbsp;</span></li>
 
 				<li><a wicket:id="rules-page-link"><span>Правила</span></a><span
