--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/headerHolder/userHeaderHolder/HeaderHolderPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/headerHolder/userHeaderHolder/HeaderHolderPanel.html
@@ -7,14 +7,18 @@
 		<div class="shell">
 			<div id="header">
 				<div id="logo">
-				
+
 					<wicket:container wicket:id="logout-input-panel">
 					</wicket:container>
-					
-					<h1 style="font-size: 45px"><wicket:container wicket:id="title"></wicket:container></h1>
-										
-				</div>
 
+					<h1 style="font-size: 45px">
+						<wicket:container wicket:id="title"></wicket:container>
+					</h1>
+
+				</div>
+				<div style="float:right; margin-top: 7px;">
+					<span wicket:id="user-name-label"></span>
+				</div>
 				<wicket:container wicket:id="main-menu-panel"></wicket:container>
 
 			</div>
