--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/LogoutPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/LogoutPanel.html
@@ -3,8 +3,7 @@
 <wicket:panel>
 	<div class="logout-input">
 
-
-		<a class="button7" wicket:id="logout"><span>Logout</span></a><span
+		<a class="button" wicket:id="logout"><span>Logout</span></a><span
 			class="arrow">&nbsp;</span>
 
 	</div>
