--- a/WEB/web-races/webapp/src/main/webapp/css/style.css
+++ b/WEB/web-races/webapp/src/main/webapp/css/style.css
@@ -411,7 +411,7 @@ ul.links li a {
 
 .footer {
 	font-size: 10px;
-	padding: 12px 13px 14px 0;
+	padding: 12px 0px 14px 0;
 }
 
 .footer, .footer a {
@@ -441,7 +441,7 @@ ul.links li a {
 	float: right;
 }
 
-a.button7 {
+a.button {
 	font-weight: 700;
 	color: white;
 	text-decoration: none;
@@ -452,22 +452,35 @@ a.button7 {
 	transition: 0.2s;
 }
 
-a.button7:hover {
+a.button:hover {
 	background: rgb(121, 178, 23);
 }
 
-a.button7:active {
+a.button:active {
 	background: rgb(95, 160, 5);
 	box-shadow: 0 3px rgb(121, 178, 23) inset;
 }
 
 .feedbackPanel {
 	text-align: center;
-	width: 984px;
+}
+
+.feedbackPanel span {
+	font-size: 150%;
 }
 
 .feedbackPanelINFO {
 	background-color: rgb(120, 200, 60);
 	color: white;
-	size: 15px;
+}
+
+.feedbackPanelWARNING {
+	background-color: rgb(255, 170, 90);
+	color: white;
+}
+
+.feedbackPanelERROR {
+	background-color: rgb(250, 20, 60);
+	font-size: 200%;
+	color: white;
 }
