--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/headerHolder/HeaderHolderPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/headerHolder/HeaderHolderPanel.html
@@ -4,19 +4,20 @@
 
 	<div id="header-holder">
 
+
 		<div class="shell">
 			<div id="header">
 				<div id="logo">
-
+					<div class="language-container" wicket:id="language-panel"></div>
 					<wicket:container wicket:id="logout-input-panel">
 					</wicket:container>
 
-					<h1 style="font-size: 45px">
+					<h1 style="font-size: 45px;">
 						<wicket:container wicket:id="title"></wicket:container>
 					</h1>
 
 				</div>
-				<div style="float:right; margin-top: 7px;">
+				<div style="float: right; margin-top: 7px;">
 					<span wicket:id="user-name-label"></span>
 				</div>
 				<wicket:container wicket:id="main-menu-panel"></wicket:container>
