--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/InputPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutInputPanel/InputPanel.html
@@ -5,10 +5,10 @@
 
 	<div class="logout-input">
 
-		<a class="button" wicket:id="registration-page-link"><span>Регистрация</span></a><span
+		<a class="button" wicket:id="registration-page-link"><span><wicket:message key="component.logoutInputPanel.registration"/></span></a><span
 			class="arrow">&nbsp;</span> 
 			<a class="button"
-			wicket:id="login-page-link"><span>Вход</span></a><span class="arrow">&nbsp;</span>
+			wicket:id="login-page-link"><span><wicket:message key="component.logoutInputPanel.input"/></span></a><span class="arrow">&nbsp;</span>
 
 	</div>
 
