--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/menuPanel/adminMenuPanel/AdminMainMenuPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/menuPanel/adminMenuPanel/AdminMainMenuPanel.html
@@ -10,16 +10,16 @@
 
 		<div id="navigation">
 			<ul>
-				<li><a wicket:id="admin-page-link"><span>Главная</span></a><span
+				<li><a wicket:id="admin-page-link"><span><wicket:message key="component.menuPanel.admin.home"/></span></a><span
 					class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="rates-page-link"><span>Ставки</span></a><span
+				<li><a wicket:id="rates-page-link"><span><wicket:message key="component.menuPanel.admin.rates"/></span></a><span
 					class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="edit-page-link"><span>Редактировать</span></a><span
+				<li><a wicket:id="edit-page-link"><span><wicket:message key="component.menuPanel.admin.edit"/></span></a><span
 					class="arrow">&nbsp;</span></li>
 
-				<li><a wicket:id="rules-page-link"><span>Правила</span></a><span
+				<li><a wicket:id="rules-page-link"><span><wicket:message key="component.menuPanel.admin.rules"/></span></a><span
 					class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="about-us-page-link"><span>О нас</span></a><span
+				<li><a wicket:id="about-us-page-link"><span><wicket:message key="component.menuPanel.admin.aboutus"/></span></a><span
 					class="arrow">&nbsp;</span></li>
 			</ul>
 		</div>
