--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/menuPanel/playerMenuPanel/PlayerMainMenuPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/menuPanel/playerMenuPanel/PlayerMainMenuPanel.html
@@ -6,15 +6,15 @@
 
 		<div id="navigation">
 			<ul>
-				<li><a wicket:id="home-page-link"><span>Главная</span></a><span class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="rates-page-link"><span>Ставки</span></a><span
+				<li><a wicket:id="home-page-link"><span><wicket:message key="component.menuPanel.player.home"/></span></a><span class="arrow">&nbsp;</span></li>
+				<li><a wicket:id="rates-page-link"><span><wicket:message key="component.menuPanel.player.rates"/></span></a><span
 					class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="result-page-link"><span>Результаты</span></a><span
+				<li><a wicket:id="result-page-link"><span><wicket:message key="component.menuPanel.player.results"/></span></a><span
 					class="arrow">&nbsp;</span></li>
 
-				<li><a wicket:id="rules-page-link"><span>Правила</span></a><span
+				<li><a wicket:id="rules-page-link"><span><wicket:message key="component.menuPanel.player.rules"/></span></a><span
 					class="arrow">&nbsp;</span></li>
-				<li><a wicket:id="about-us-page-link"><span>О нас</span></a><span
+				<li><a wicket:id="about-us-page-link"><span><wicket:message key="component.menuPanel.player.aboutus"/></span></a><span
 					class="arrow">&nbsp;</span></li>
 
 			</ul>
