update - result edit page

--- a/WEB/web-races/webapp/src/main/webapp/css/style.css
+++ b/WEB/web-races/webapp/src/main/webapp/css/style.css
@@ -9,7 +9,7 @@ body {
 	line-height: 18px;
 	font-family: Arial, sans-serif;
 	color: #565d54;
-	background: url(images/body-bg.gif) repeat 0 0;
+	background: url(images/body-bg.gif) repeat 0 0п;
 }
 
 html, body {
