--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationForm/RegistrationUserForm.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationForm/RegistrationUserForm.html
@@ -32,8 +32,7 @@
 
 
 			<li>
-				<button class="submit" type="submit" wicket:id="submit-button">Submit
-					Form</button>
+				<button class="submit" type="submit" wicket:id="submit-button"><wicket:message key="all.save"/></button>
 
 			</li>
 		</ul>
