--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationform/RegistrationUserForm.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/registrationform/RegistrationUserForm.html
@@ -5,41 +5,52 @@
 
 		<ul>
 			<li>
-				<h2>Contact Us</h2> <span class="required_notification">*
-					Denotes Required Field</span>
+				<h2>
+					<wicket:message key="component.registration.user.data" />
+				</h2> <span class="required_notification">* <wicket:message
+						key="component.registration.required.field" /></span>
 			</li>
-			<li><label wicket:for="firstName">First name:</label> <input
-				type="text" wicket:id="firstName" placeholder="Andrew" required /></li>
+			<li><label wicket:for="firstName"><wicket:message
+						key="all.firstName" />:</label> <input type="text" wicket:id="firstName"
+				placeholder="Andrew" required /></li>
 
-			<li><label wicket:for="lastName">Surname:</label> <input
-				type="text" wicket:id="lastName" placeholder="Zenov" required /></li>
+			<li><label wicket:for="lastName"><wicket:message
+						key="all.lastName" />:</label> <input type="text" wicket:id="lastName"
+				placeholder="Zenov" required /></li>
 
-			<li><label wicket:for="email">Email:</label> <input type="email"
-				wicket:id="email" placeholder="andrew_zenov@example.com" required />
-				<span class="form_hint">Proper format "name@something.com"</span></li>
+			<li><label wicket:for="email"><wicket:message
+						key="all.email" />:</label> <input type="email" wicket:id="email"
+				placeholder="andrew_zenov@example.com" required /> <span
+				class="form_hint">Proper format "name@something.com"</span></li>
 
-			<li><label wicket:for="login">Login:</label> <input type="text"
-				wicket:id="login" placeholder="login" required /></li>
-
-			<li><label wicket:for="password">Password:</label> <input
-				type="password" wicket:id="password" required /></li>
-
-			<!--  wicket:enclosure child=this_component_will_determine_visibility>
-			</wicket:enclosure-->
-			<li><label wicket:for="drop-role">Role:</label> <select
-				wicket:id="drop-role" required></select></li>
+			<li><label wicket:for="login"><wicket:message
+						key="all.login" />:</label> <input type="text" wicket:id="login"
+				placeholder="login" required /></li>
+				
+			<wicket:enclosure child="password">
+				<li><label wicket:for="password"><span
+						wicket:id="password-label"></span></label><input type="password"
+					wicket:id="password" required /></li>
+			</wicket:enclosure>
+			
+			<li><label wicket:for="drop-role"><wicket:message
+						key="all.role" />:</label> <select wicket:id="drop-role" required></select></li>
 
 
 
 			<li>
-				<button class="submit" type="submit" wicket:id="submit-button"><wicket:message key="all.save"/></button>
+				<button class="submit" type="submit" wicket:id="submit-button">
+					<wicket:message key="all.save" />
+				</button>
 
 			</li>
 		</ul>
 	</form>
+	<br />
 
 	<div class="users-page">
-		<a class="button" wicket:id="users-page-link">Go to users </a>
+		<a class="button" wicket:id="users-page-link"><wicket:message
+				key="all.users" /> </a>
 	</div>
 
 
