--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutinputpanel/LogoutPanel.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/logoutinputpanel/LogoutPanel.html
@@ -3,8 +3,13 @@
 <wicket:panel>
 	<div class="logout-input">
 
-		<a class="button" wicket:id="logout"><span><wicket:message key="component.logoutInputPanel.logout"/></span></a><span
-			class="arrow">&nbsp;</span>
+
+		<a class=" button-red" wicket:id="personal-area-link"><span><wicket:message
+					key="component.logoutInputPanel.area" /></span></a><span class="arrow">&nbsp;</span>
+		<a class="button" wicket:id="logout"><span><wicket:message
+					key="component.logoutInputPanel.logout" /></span></a><span class="arrow">&nbsp;</span>
+
+
 
 	</div>
 
