--- a/WEB/web-races/webapp/src/main/webapp/css/style.css
+++ b/WEB/web-races/webapp/src/main/webapp/css/style.css
@@ -31,7 +31,6 @@ a img {
 	border: 0;
 }
 
-
 input, textarea, select {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
@@ -466,6 +465,26 @@ a.button:active {
 	box-shadow: 0 3px rgb(121, 178, 23) inset;
 }
 
+a.button-red {
+	color: white;
+	text-decoration: none; padding : .8em 1em calc( .8em + 3px);
+	border-radius : 3px;
+	background: rgb(240, 120, 0);
+	box-shadow: 0 -3px rgb(255, 128, 0) inset;
+	transition: 0.2s;
+	padding: .8em 1em calc(.8em + 3px);
+	border-radius: 3px;
+}
+
+a.button-red:hover {
+	background: rgb(255, 128, 0);
+}
+
+a.button-red:active {
+	background: rgb(240, 120, 0);
+	box-shadow: 0 3px rgb(255, 128, 0) inset;
+}
+
 .feedbackPanel {
 	text-align: center;
 }
@@ -620,7 +639,7 @@ table
 	border-width: 0px 0px 1px 1px;
 }
 
-.tableconteiner a{
+.tableconteiner a {
 	color: white;
 }
 
