--- a/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/footerholder/FooterHolder.html
+++ b/WEB/web-races/webapp/src/main/java/by/training/java/grodno/az/webapp/component/footerholder/FooterHolder.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8" />
-
+<html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
 
 	<div id="footer-holder">
@@ -16,5 +16,5 @@
 	</div>
 
 </wicket:panel>
-
+</html>
 
